--- a/package.json
+++ b/package.json
@@ -5,5 +5,26 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^9.1.3",
+    "supertest": "^6.1.6"
+  },
+  "name": "taskmanager",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nisargpatel1504/taskManager.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nisargpatel1504/taskManager/issues"
+  },
+  "homepage": "https://github.com/nisargpatel1504/taskManager#readme",
+  "description": ""
 }
